# pcl-mlir

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flake.nix
.github/workflows/: changelog-validator.yml
cmake/: FeatureTests.cmake  GitVersion.cmake  PCLConfig.cmake.in  PCLMacros.cmake
cmake/feature_tests/: non_type_template_args.cpp
include/: CMakeLists.txt
include/pcl/: CMakeLists.txt  InitAllDialects.h
include/pcl/Dialect/IR/: Attrs.h  Attrs.td  CMakeLists.txt  Dialect.h  Dialect.td  Ops.h  Ops.td  Types.h  Types.td
include/pcl/Dialect/Shared/: Builders.h
include/pcl/Export/: Printer.h
include/pcl/Pass/: PassBase.h  PassBase.td
include/pcl/Transforms/: CMakeLists.txt  PCLTransformationPasses.h  PCLTransformationPasses.td
include/pcl/Utils/: Constants.h
lib/Dialect/: CMakeLists.txt  Ops.cpp  Registration.cpp
lib/Transforms/: CMakeLists.txt  PCLPrintPass.cpp
lib/pcl/: Dialect.cpp  Ops.cpp  Registration.cpp
nix/: pcl.nix
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Dialect/: basic_parse.mlir  basic_parse_fail.mlir  basic_parse_success.mlir
tools/: CMakeLists.txt
tools/include/tools/: config.h
tools/pcl-opt/: CMakeLists.txt  pcl-opt.cpp
tools/pcl-translate/: CMakeLists.txt  pcl-translate.cpp
unittests/: PCLTestBase.h
unittests/IR/: BuilderTests.cpp
